Copied from an old PixelCC Archive file I coded.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
+   <meta name="author" content="Josh 'Eathuis' Wilson">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>PixelCheeseCake | Archive</title>
+   <link rel="stylesheet" type="text/css" href="/testrealm/stylesheet.css">
+</head>
+   <body>
+     <div id="header">
+         <div id="header-text">Pixel<span style="color:red;">CheeseCake</span>&nbsp; 
+     <span style="font-size:20px;font-family: 'Montserrat', sans-serif;" align="right">Archive</span>
+     <a type="button" class="btn" href="/">Home</a>&nbsp;<a type="button" class="btn" href="/about-us/staff">Staff</a>&nbsp;<a type="button" class="btn" href="#videos">Videos</a>&nbsp;<a type="button" class="btn"    href="/about-us/contact">Contact</a></div></div>
+   <div id="page-wrap">
+<center>
+<p align="center">&nbsp;</p>
+This is where we put all our archived themes.</p>
+1.&nbsp; <a href="/archive/1">Theme 1</a> *used from Oct. 2014 - Dec. 2014*</p>
+2.&nbsp; <a href="/archive/2">Theme 2</a> *used from Dec. 2014 - 17th Jan 2015*</p>
+<p align="center">&nbsp;</p>
+</center></div>
+<div id="footer">
+PixelCheeseCake &copy; PixelCC LTD&trade; 2015. &nbsp; All Rights Reserved. &nbsp; <a href="#">Archive</a> &nbsp; <a href="//forums.pixelcc.info">Forums</a> &nbsp; <a href="//youtube.com/pixelcheesecake" target="_blank">YouTube</a>&nbsp; <a href="//fb.me/pixelcc" target="_blank">Facebook</a> &nbsp; <a href="//twitter.com/pixelcheesecake" target="_blank">Twitter</a> &nbsp; <a href="//reddit.com/r/pixelcheesecake" target="_blank">Subreddit</a></div>
+</body>
+</html>
