--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="author" content="Josh 'Eathuis' Wilson">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>PixelCheeseCake | Archive</title>
-   <link rel="stylesheet" type="text/css" href="/testrealm/stylesheet.css">
+   <link rel="stylesheet" type="text/css" href="/stylesheet.css">
 </head>
    <body>
      <div id="header">
