--- a/pixelcc.html
+++ b/pixelcc.html
@@ -9,7 +9,7 @@
    <!-- Bootstrap --!>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
    <!-- /end --!>
-   <link rel="stylesheet" type="text/css" href="/archive/newstyle.css">
+   <link rel="stylesheet" type="text/css" href="/pixelcc.css">
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
