--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <div id="header">
          <div id="header-text">Pixel<span style="color:red;">CheeseCake</span>&nbsp; 
      <span style="font-size:20px;font-family: 'Montserrat', sans-serif;" align="right">Archive</span>
-     <a type="button" class="btn" href="/">Home</a>&nbsp;<a type="button" class="btn" href="/about-us/staff">Staff</a>&nbsp;<a type="button" class="btn" href="#videos">Videos</a>&nbsp;<a type="button" class="btn"    href="/about-us/contact">Contact</a></div></div>
+     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Staff</a>&nbsp;<a type="button" class="btn" href="#">Videos</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
