--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
    <body>
      <div id="header">
-         <div id="header-text">Pixel<span style="color:red;">CheeseCake</span>&nbsp; 
+         <div id="header-text">Jish D Wilburson's Little Page of the Internet</span>&nbsp; 
      <span style="font-size:20px;font-family: 'Montserrat', sans-serif;" align="right">Archive</span>
-     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Staff</a>&nbsp;<a type="button" class="btn" href="#">Videos</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
+     <a type="button" class="btn" href="#">Home</a>>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
@@ -22,7 +22,5 @@ This is where we put all our archived themes.</p>
 2.&nbsp; <a href="/archive/2">Theme 2</a> *used from Dec. 2014 - 17th Jan 2015*</p>
 <p align="center">&nbsp;</p>
 </center></div>
-<div id="footer">
-PixelCheeseCake &copy; PixelCC LTD&trade; 2015. &nbsp; All Rights Reserved. &nbsp; <a href="#">Archive</a> &nbsp; <a href="//forums.pixelcc.info">Forums</a> &nbsp; <a href="//youtube.com/pixelcheesecake" target="_blank">YouTube</a>&nbsp; <a href="//fb.me/pixelcc" target="_blank">Facebook</a> &nbsp; <a href="//twitter.com/pixelcheesecake" target="_blank">Twitter</a> &nbsp; <a href="//reddit.com/r/pixelcheesecake" target="_blank">Subreddit</a></div>
 </body>
 </html>
