--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
-This is where we put all our archived themes.</p>
-1.&nbsp; <a href="/archive/1">Theme 1</a> *used from Oct. 2014 - Dec. 2014*</p>
-2.&nbsp; <a href="/archive/2">Theme 2</a> *used from Dec. 2014 - 17th Jan 2015*</p>
+Dev Log on recent changes:</br>
+<ul>
+   <ol>Changed Code in Stylesheet</ol>
+   <ol></ol>
+</ul>
 <p align="center">&nbsp;</p>
 </center></div>
 </body>
