--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
 <center>
 <p align="center">&nbsp;</p>
 Dev Log on recent changes:</br>
-<ul>
-   <ol>Changed Code in Stylesheet</ol>
-   <ol></ol>
-</ul>
+Documentation pertaining to such events of my internet presense will make their home here, all said documentation is owned by 
+there repective authors and cannot be used unless stated otherwise.
 <p align="center">&nbsp;</p>
 </center></div>
 </body>
