--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
    <body>
      <div id="header">
-         <div id="header-text">Jish D Wilburson's Little Page of the Internet</span>&nbsp; 
+         <div id="header-text">Jish D. Wilburson's Little Page of the Internet</span>&nbsp; 
      <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
    <div id="page-wrap">
 <center>
