--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <p align="center">&nbsp;</p>
 Dev Log on recent changes:</br>
 Documentation pertaining to such events of my internet presense will make their home here, all said documentation is owned by 
-there repective authors and cannot be used unless stated otherwise.
+there repective authors and cannot be used unless stated otherwise.</p>
+*Note* This webpage is not mobile compatible thus far, I'll work on that later.
 <p align="center">&nbsp;</p>
 </center></div>
 </body>
