--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ there repective authors and cannot be used unless stated otherwise.</p>
 *Note* This webpage is not mobile compatible thus far, I'll work on that later.
 <p align="center">&nbsp;</p>
 </center></div>
-<p align="center"> &nbsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
 incididunt ut labore et dolore magna aliqua.</p>
 <p align="center">&nbsp;</p>
 </body>
