--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
-@import url(http://fonts.googleapis.com/css?family=Oswald);
+<!DOCTYPE html>
+<html>
+  <style>
+  @import url(http://fonts.googleapis.com/css?family=Oswald);
+  </style>
+<body>
 <marquee direction="down" width="100%" height="100%" behavior="alternate" >
   <marquee behavior="alternate">
-   <span style="font-family: 'Oswald', sans-serif;font-size:20%;">Jish is Awesome</span>
+   <span style="font-family: 'Oswald', sans-serif;font-size:40%;">Jish is Awesome</span>
   </marquee>
 </marquee>
+</body>
+</html>
