--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<head>
 <title>Error 404: Life Not Found</title>
 <style>
   @import url(http://fonts.googleapis.com/css?family=Oswald);
@@ -36,6 +37,7 @@
     100% { opacity: 1.0; }
   }
 </style>
+</head>
 
  <marquee direction="down" width="100%" height="100%" behavior="alternate" >
   <marquee behavior="alternate">
