--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <title>Error 404: Life Not Found</title>
 <style>
   @import url(http://fonts.googleapis.com/css?family=Oswald);
+   @-webkit-keyframes eathuisbackground { 
+     0% {background-color: #F78181;} 50% {background-color: #F6CEE3;} 100% {background-color: #A9E2F3;
+   } 
+  html, body{
+    -webkit-animation: eathuisbackground 10s infinite alternate;
+  }
   .blink_me {
     -webkit-animation-name: blinker;
     -webkit-animation-duration: 1s;
