--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    @-webkit-keyframes eathuisbackground { 
      0% {background-color: #F78181;} 50% {background-color: #F6CEE3;} 100% {background-color: #A9E2F3;
    } 
-  html, body{
+  .body{
     -webkit-animation: eathuisbackground 10s infinite alternate;
   }
   .blink_me {
