--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
   }
 </style>
 </head>
-
+<body>
  <marquee direction="down" width="100%" height="100%" behavior="alternate" >
   <marquee behavior="alternate">
    <span class="blink_me" style="font-family: 'Oswald', sans-serif;font-size:150%;">Jish is Awesome</span>
   </marquee>
 </marquee>
+</body>
