--- a/index.html
+++ b/index.html
@@ -1,53 +1,1 @@
-<head>
-<title>Error 404: Life Not Found</title>
-<style>
-  @import url(http://fonts.googleapis.com/css?family=Oswald);
-   @-webkit-keyframes eathuisbackground { 
-     0% {background-color: #F78181;} 50% {background-color: #F6CEE3;} 100% {background-color: #A9E2F3;
-   } 
-  .body{
-    -webkit-animation: eathuisbackground 10s infinite alternate;
-  }
-  .blink_me {
-    -webkit-animation-name: blinker;
-    -webkit-animation-duration: 1s;
-    -webkit-animation-timing-function: linear;
-    -webkit-animation-iteration-count: infinite;
-    
-    -moz-animation-name: blinker;
-    -moz-animation-duration: 1s;
-    -moz-animation-timing-function: linear;
-    -moz-animation-iteration-count: infinite;
-    
-    animation-name: blinker;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-  }
-
-  @-moz-keyframes blinker {  
-    0% { opacity: 1.0; }
-    50% { opacity: 0.0; }
-    100% { opacity: 1.0; }
-  }
-
-  @-webkit-keyframes blinker {  
-    0% { opacity: 1.0; }
-    50% { opacity: 0.0; }
-    100% { opacity: 1.0; }
-  }
-
-  @keyframes blinker {  
-    0% { opacity: 1.0; }
-    50% { opacity: 0.0; }
-    100% { opacity: 1.0; }
-  }
-</style>
-</head>
-<body>
- <marquee direction="down" width="100%" height="100%" behavior="alternate" >
-  <marquee behavior="alternate">
-   <span class="blink_me" style="font-family: 'Oswald', sans-serif;font-size:150%;">Jish is Awesome</span>
-  </marquee>
-</marquee>
-</body>
+Working on it.
