--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-Working on it.
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
+   <meta name="author" content="Josh 'Eathuis' Wilson">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title><Error 404: Life Not Found></Error></title>
+   <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+</head>
+   <body>
+     <div id="header">
+         <div id="header-text">Jish D. Wilburson's Little Page of the Internet</span>&nbsp; 
+     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
+   <div id="page-wrap">
+<center>
+<p align="center">&nbsp;</p>
+Dev Log on recent changes:</br>
+Documentation pertaining to such events of my internet presense will make their home here, all said documentation is owned by 
+there repective authors and cannot be used unless stated otherwise.</p>
+*Note* This webpage is not mobile compatible thus far, I'll work on that later.
+<p align="center">&nbsp;</p>
+</center></div>
+<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+incididunt ut labore et dolore magna aliqua.</p>
+<p align="center">&nbsp;</p>
+</body>
+</html>
