--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
    <meta name="author" content="Josh 'Eathuis' Wilson">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>Josh Wilson's Online Résumé</Error></title>
+   <title>Josh Wilson's Online Résumé</title>
    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
 </head>
    <body>
