--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
    <body>
      <div id="header">
-         <div id="header-text">Josh Wilson</span></br> 
+         <div id="header-text">Phoenix Wilson</span></br> 
      <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
    <div id="page-wrap">
 <center>
