--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
+   <meta name="author" content="Josh 'Eathuis' Wilson">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Josh Wilson's Online Résumé</title>
+   <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+</head>
+   <body>
+     <div id="header">
+         <div id="header-text"><span class="rainbow">Phoenix Wilson</span></br> 
+     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
+   <div id="page-wrap">
+<center>
+<p align="center">&nbsp;</p>
+Dev Log on recent changes:</br>
+Documentation pertaining to such events of my internet presense will make their home here, all said documentation is owned by 
+there repective authors and cannot be used unless stated otherwise.</p>
+<p align="center">&nbsp;</p>
+</center></div>
+<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp; Site Designed by Josh Wilson 2014.</p>
+<p align="center">&nbsp;</p>
+</body>
+</html>
