--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@ Documentation pertaining to such events of my internet presense will make their 
 there repective authors and cannot be used unless stated otherwise.</p>
 <p align="center">&nbsp;</p>
 </center></div>
-<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp; Site Designed by Josh Wilson 2014.</p>
+<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp;<span class="rainbow">Site Designed by Josh Wilson 2014.</span></p>
 <p align="center">&nbsp;</p>
 </body>
 </html>
