--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
    <body>
      <div id="header">
-         <div id="header-text"><span class="rainbow">Phoenix Wilson</span></br> 
+         <div id="header-text"><span class="rainbow" style="font-weight:bold;">Phoenix Wilson</span></br> 
      <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
    <div id="page-wrap">
 <center>
