--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,14 @@
    <title>Josh Wilson's Online Résumé</title>
    <link rel="stylesheet" type="text/css" href="/stylesheet.css">
 </head>
+<script>
+   function popup() {
+    alert("The Magical Moose denies permission as you seem to already be at your intended destination!");
+</script>
    <body>
      <div id="header">
          <div id="header-text"><span class="rainbow" style="font-weight:bold;">Phoenix Wilson</span></br> 
-     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="#">Contact</a></div></div>
+     <a type="button" class="btn" href="/">Home</a>&nbsp;<a type="button" onclick="popup()" class="btn">Contact</a></div></div>
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
