--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
    <body>
      <div id="header">
          <div id="header-text"><span class="rainbow" style="font-weight:bold;">Phoenix Wilson</span></br> 
-     <a type="button" class="btn" href="/">Home</a>&nbsp;<a type="button" onclick="popup()" class="btn">Contact</a></div></div>
+     <a type="button" class="btn" href="/">Home</a>&nbsp;<a onclick="popup()" type="button" class="btn">Contact</a></div></div>
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
