--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <body>
      <div id="header">
          <div id="header-text" style="font-weight:bold;">Phoenix Wilson</span></br> 
-     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="/eathuis">Contact</a></div></div>
+     <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="/contact">Contact</a></div></div>
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
