--- a/pixelcc.html
+++ b/pixelcc.html
@@ -46,7 +46,7 @@ function popup() {
  </head>
 <body>
    <center>
-<div id="headerfiller"><span style="float:left"><a title="Click to go back to the Old Style..." href="/1">Old</a></span>
+<div id="headerfiller"><span style="float:left"><a title="Click to go back to the Old Style..." href="#">Old</a></span>
 The <em>Best</em> CheeseCake is a PixelCheeseCake!
 </div>
 <div id="header"><a href="#"><div id="img-logo"><img src="//i.imgur.com/7grcEV7.png"></div></a></p></div>
@@ -54,7 +54,7 @@ The <em>Best</em> CheeseCake is a PixelCheeseCake!
 <div id="sticky"><span style="color:white;float:right;">&copy;PixelCC</br>
 <span style="font-size:10px;color:red;">Happy 2015!</span></span>
 <img title="Pixelated Cheesecakery!" style="float:left;" src="//i.imgur.com/UI0YDVG.jpg" width="35px" height="35px">
-<a href="/archive/2" type="button" class="btn btn-info">Home</a> &nbsp; <a href="/#videos" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="/archive/2/contact" type="button" class="btn btn-primary">Contact</a> &nbsp; <a href="#" type="button" class="btn btn-danger" title="Offline Mode">Forums</a></p></div>
+<a href="#" type="button" class="btn btn-info">Home</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Contact</a> &nbsp; <a href="#" type="button" class="btn btn-danger" title="Offline Mode">Forums</a></p></div>
 </br>
      <div class="content"></br>
 <h1 style="font-family: 'Pacifico', cursive;">Meet Our <span style="color:red;">Team</span></h1>
