--- a/pixelcc.html
+++ b/pixelcc.html
@@ -46,7 +46,7 @@ function popup() {
  </head>
 <body>
    <center>
-<div id="headerfiller"><span style="float:left"><a title="Click to go back to the Old Style..." href="#">Old</a></span>
+<div id="headerfiller"><span style="float:left"><a title="Go back to the main page..." href="'/">Back</a></span>
 The <em>Best</em> CheeseCake is a PixelCheeseCake!
 </div>
 <div id="header"><a href="#"><div id="img-logo"><img src="//i.imgur.com/7grcEV7.png"></div></a></p></div>
