--- a/unicorns.html
+++ b/unicorns.html
@@ -12,7 +12,11 @@
 <font color=#64FE2E>DANCING</font>
 <font color=#00BFFF>ON</font> <font color=#0404B4>RAINBOWS</font> <font color=#5F04B4>YAYUH</font></p>
 <iframe src="https://www.youtube.com/embed/Sm368W0OsHo?autoplay=1" style="display: none;"></iframe>
+                <marquee direction="down" width="100%" height="100%" behavior="alternate" >
+  <marquee behavior="alternate">
                 <img src="http://i.imgur.com/9NK4X5Z.png">
+                </marquee>
+                </marquee>
                </div> 
                <p style="font-family: 'Karla', sans-serif;" align="center">For <strong>Holly</strong> to help her feel better! &hearts; &nbsp;
                Made with the aid of Dr Pepper by <strong>Josh</strong> &diams;</br>
