--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
    <body>
      <div id="header">
-         <div id="header-text" style="font-weight:bold;">Phoenix Wilson</span></br> 
+         <div id="header-text" style="font-weight:bold;">J.D. Wilson</span></br> 
      <a type="button" class="btn" href="#">Home</a>&nbsp;<a type="button" class="btn" href="/contact">Contact</a></div></div>
    <div id="page-wrap">
 <center>
@@ -21,7 +21,7 @@ Documentation pertaining to such events of my internet presense will make their 
 there repective authors and cannot be used unless stated otherwise.</p>
 <p align="center">&nbsp;</p>
 </center></div>
-<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp; Site Designed by Josh Wilson 2014.</p>
+<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp; Site Designed by Phoenix LLC 2014.</p>
 <p align="center">&nbsp;</p>
 </body>
 </html>
