--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 </head>
    <body>
      <div id="header">
-         <div id="header-text"><span class="rainbow" style="font-weight:bold;">Phoenix Wilson</span></br> 
+         <div id="header-text"><span class="rainbow" style="font-weight:bold;">J.D. Wilson</span></br> 
      <a type="button" class="btn" href="/">Home</a>&nbsp;<a onclick="popup()" style="cursor:pointer;" type="button" class="btn">Contact</a></div></div>
    <div id="page-wrap">
 <center>
