--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,17 @@
    <div id="page-wrap">
 <center>
 <p align="center">&nbsp;</p>
-Dev Log on recent changes:</br>
-Documentation pertaining to such events of my internet presense will make their home here, all said documentation is owned by 
-there repective authors and cannot be used unless stated otherwise.</p>
+<!-- Do not change the code! -->
+<a id="foxyform_embed_link_729417" href="http://www.foxyform.com/">foxyform</a>
+<script type="text/javascript">
+(function(d, t){
+   var g = d.createElement(t),
+       s = d.getElementsByTagName(t)[0];
+   g.src = "http://www.foxyform.com/js.php?id=729417&sec_hash=37885004170&width=350px";
+   s.parentNode.insertBefore(g, s);
+}(document, "script"));
+</script>
+<!-- Do not change the code! -->
 <p align="center">&nbsp;</p>
 </center></div>
 <p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp;<span class="rainbow">Site Designed by Josh Wilson 2014.</span></p>
