--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,7 @@
 }(document, "script"));
 </script>
 <!-- Do not change the code! -->
+*note* If you click the "send message" button, regardless if anything pops up, your message will be sent. 
 <p align="center">&nbsp;</p>
 </center></div>
 <p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp;<span class="rainbow">Site Designed by Josh Wilson 2014.</span></p>
