--- a/pixelcc.html
+++ b/pixelcc.html
@@ -38,6 +38,14 @@ $(function(){
 function popup() {
     alert("You're on that page, silly!");
 }
+
+function eathuis() {
+  alert("email no longer exists");
+}
+
+function hollz100() {
+  alert("email no longer exists");
+}
 </script>
 <style>
 @import url(http://fonts.googleapis.com/css?family=Mountains+of+Christmas);
@@ -96,9 +104,9 @@ Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gr
 </div>
 <div id="contact"></div>
 <div id="footerinfo">
-Email: <a title="YAY! Email, Wooo!" href="mailto:contact@pixelcc.info">contact@pixelcc.info</a></br>
-Josh's Email: <a title="Ew, why are you emailing him?" href="mailto:eathuis@pixelcc.info">eathuis@pixelcc.info</a></br>
-Holly's Email: <a title="Will never respond!" href="mailto:hollz100@pixelcc.info">hollz100@pixelcc.info</a>
+Email: <a title="YAY! Email, Wooo!" href="mailto:pixelcheesecake@gmail.com">pixelcheesecake@gmail.com</a></br>
+Josh's Email: <a title="Ew, why are you emailing him?" href="#">eathuis@pixelcc.info</a></br>
+Holly's Email: <a title="Will never respond!" href="#">hollz100@pixelcc.info</a>
 <p align="center">&nbsp;</p>
 &diams; External Links &diams;</p>
 &#8226;&nbsp; <a title="Subscribe to our channel" href="//youtube.com/pixelcheesecake" type="button" class="btn btn-danger btn-sm" target="_blank">YouTube</a> &#8226;&nbsp; <a title="Join in on the Gaming Fun!" href="//steamcommunity.com/groups/pixelcheesecake" type="button" class="btn btn-warning btn-sm" target="_blank">Steam Group</a> &#8226;&nbsp; <a title="Follow us!" href="//twitter.com/pixelcheesecake" type="button" class="btn btn-info btn-sm" target="_blank">Twitter</a> &#8226;&nbsp; <a title="Like our page!" href="//fb.me/pixelcc" type="button" class="btn btn-primary btn-sm" target="_blank">Facebook</a> &#8226;&nbsp; <a title="Reddit away!" href="//reddit.com/r/pixelcheesecake" type="button" class="btn btn-success btn-sm" target="_blank">Subreddit</a> &#8226;&nbsp; <a title="Ask us anything!" href="//ask.fm/pixelcheesecake" type="button" class="btn btn-danger btn-sm" target="_blank">Ask FM</a> &#8226;&nbsp; 
