--- a/pixelcc.html
+++ b/pixelcc.html
@@ -42,6 +42,10 @@ function popup() {
 function noemail() {
   alert("Email No Longer Exists.");
 }
+
+function offline() {
+  alert("Forums Are Offline.")
+}
 </script>
 <style>
 @import url(http://fonts.googleapis.com/css?family=Mountains+of+Christmas);
@@ -58,7 +62,7 @@ The <em>Best</em> CheeseCake is a PixelCheeseCake!
 <div id="sticky"><span style="color:white;float:right;">&copy;PixelCC</br>
 <span style="font-size:10px;color:red;">Happy 2015!</span></span>
 <img title="Pixelated Cheesecakery!" style="float:left;" src="//i.imgur.com/UI0YDVG.jpg" width="35px" height="35px">
-<a href="#" type="button" class="btn btn-info">Home</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Contact</a> &nbsp; <a href="#" type="button" class="btn btn-danger" title="Offline Mode">Forums</a></p></div>
+<a href="#" type="button" class="btn btn-info">Home</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Contact</a> &nbsp; <a onclick="offline()" style="cursor:pointer;" type="button" class="btn btn-danger" title="Offline Mode">Forums</a></p></div>
 </br>
      <div class="content"></br>
 <h1 style="font-family: 'Pacifico', cursive;">Meet Our <span style="color:red;">Team</span></h1>
