--- a/pixelcc.html
+++ b/pixelcc.html
@@ -55,7 +55,7 @@ function offline() {
 <body>
    <center>
 <div id="headerfiller"><span style="float:left"><a title="Go back to the main page..." href="/">Back</a></span>
-The <em>Best</em> CheeseCake is a PixelCheeseCake!
+<marquee>The <em>Best</em> CheeseCake is a PixelCheeseCake!</marquee>
 </div>
 <div id="header"><a href="#"><div id="img-logo"><img src="//i.imgur.com/7grcEV7.png"></div></a></p></div>
 <div id="sticky-anchor"></div>
