--- a/pixelcc.html
+++ b/pixelcc.html
@@ -54,8 +54,7 @@ function offline() {
  </head>
 <body>
    <center>
-<div id="headerfiller"><span style="float:left"><a title="Go back to the main page..." href="/">Back</a></span>
-<marquee>The <em>Best</em> CheeseCake is a PixelCheeseCake!</marquee>
+<div id="headerfiller"><marquee>The <em>Best</em> CheeseCake is a PixelCheeseCake!</marquee>
 </div>
 <div id="header"><a href="#"><div id="img-logo"><img src="//i.imgur.com/7grcEV7.png"></div></a></p></div>
 <div id="sticky-anchor"></div>
