--- a/pixelcc.html
+++ b/pixelcc.html
@@ -54,7 +54,7 @@ function offline() {
  </head>
 <body>
    <center>
-<div id="headerfiller"><marquee class="alternate">The <em>Best</em> CheeseCake is a PixelCheeseCake!</marquee>
+<div id="headerfiller"><marquee class="alternate">The Best CheeseCake is a PixelCheeseCake!</marquee>
 </div>
 <div id="header"><a href="#"><div id="img-logo"><img src="//i.imgur.com/7grcEV7.png"></div></a></p></div>
 <div id="sticky-anchor"></div>
