--- a/pixelcc.html
+++ b/pixelcc.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
 <!--
 __________.__              .__  _________ .__                                               __           
 \______   \__|__  ___ ____ |  | \_   ___ \|  |__   ____   ____   ______ ____   ____ _____  |  | __ ____  
@@ -8,8 +12,6 @@ __________.__              .__  _________ .__                                   
 
 !-->
 
-<!DOCTYPE html>
-  <html>
  <head><meta http-equiv="Content-Type" content="text/html; charset=gb18030">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <link rel='shortcut icon' href="/favicon.ico" type="image/x-icon" />
