--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 <p></p>*note* If you click the "send message" button, regardless if anything pops up, your message will be sent.</p>
 <p align="center">&nbsp;</p>
 </center></div>
-<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp;<span class="rainbow">Site Designed by Josh Wilson 2014.</span></p>
+<p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp;<span class="rainbow">&copy; 2014 - 2016</span></p>
 <p align="center">&nbsp;</p>
 </body>
 </html>
