--- a/pixelcc.html
+++ b/pixelcc.html
@@ -66,7 +66,11 @@ function offline() {
  </head>
 <body>
    <center>
-<div id="headerfiller"><marquee class="alternate">The Best CheeseCake is a PixelCheeseCake!</marquee>
+<div id="headerfiller">
+    <div class="marquee">
+    <p>The Best CheeseCake is a PixelCheeseCake!</p>
+    <p>Test</p>
+    </div>
 </div>
 <div id="header"><a href="#"><div id="img-logo"><img src="//i.imgur.com/7grcEV7.png"></div></a></p></div>
 <div id="sticky-anchor"></div>
