--- a/pixelcc.html
+++ b/pixelcc.html
@@ -20,45 +20,12 @@ __________.__              .__  _________ .__                                   
    <title>Staff &diams; PixelCheeseCake</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="/pixelcc.css">
+   <script src="/pixelcc.js>"
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
    <script src="jquery.slides.min.js"></script>
-<script>
-function sticky_relocate() {
-    var window_top = $(window).scrollTop();
-    var div_top = $('#sticky-anchor').offset().top;
-    if (window_top > div_top) {
-        $('#sticky').addClass('stick');
-    } else {
-        $('#sticky').removeClass('stick');
-    }
-}
 
-$(function () {
-    $(window).scroll(sticky_relocate);
-    sticky_relocate();
-});
-
-$(function(){
-      $("#slides").slidesjs({
-        width: 940,
-        height: 528
-      });
-    });
-
-function popup() {
-    alert("You're on that page, silly!");
-}
-
-function noemail() {
-  alert("Email No Longer Exists.");
-}
-
-function offline() {
-  alert("Forums Are Offline.")
-}
-</script>
 <style>
 @import url(http://fonts.googleapis.com/css?family=Mountains+of+Christmas);
 #slides {display:none;}
