--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -19,8 +19,8 @@ __________.__              .__  _________ .__                                   
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <title>Staff &diams; PixelCheeseCake</title>
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-   <link rel="stylesheet" type="text/css" href="/pixelcc.css">
-   <script src="/pixelcc.js"></script>
+   <link rel="stylesheet" type="text/css" href="//eathuis.github.io/pixelcc/pixelcc.css">
+   <script src="//eathuis.github.io/pixelcc/pixelcc.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
