--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -54,7 +54,7 @@ $(function () {
     <p>Test</p>
     </div>
 </div>
-<div id="header"><a href="#"><div id="img-logo"><img src="//i.imgur.com/7grcEV7.png"></div></a></p></div>
+<div id="header"></div>
 <div id="sticky-anchor"></div>
 <div id="sticky"><span style="color:white;float:right;">&copy;PixelCC</br>
 <span style="font-size:10px;color:red;">Happy 2015!</span></span>
