--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -21,6 +21,7 @@ __________.__              .__  _________ .__                                   
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
    <link rel="stylesheet" type="text/css" href="//eathuis.github.io/pixelcc/css/stylesheet.css">
    <script src="//eathuis.github.io/pixelcc/pixelcc.js"></script>
+   <script src="//eathuis.github.io/pixelcc/twitter.js"></script>
    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -54,7 +55,9 @@ $(function () {
     <p>Test</p>
     </div>
 </div>
-<div id="header"></div>
+<div id="header">
+    <div id="tweet"></div>
+</div>
 <div id="sticky-anchor"></div>
 <div id="sticky"><span style="color:white;float:right;">&copy;PixelCC</br>
 <span style="font-size:10px;color:red;">Happy 2015!</span></span>
