--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -56,7 +56,10 @@ $(function () {
     </div>
 </div>
 <div id="header">
-    <div id="tweet"></div>
+    <div id="tweet">
+        <a class="twitter-timeline" href="https://twitter.com/pixelcheesecake" data-widget-id="675069127908806656">Tweets by @pixelcheesecake</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+</div>
 </div>
 <div id="sticky-anchor"></div>
 <div id="sticky"><span style="color:white;float:right;">&copy;PixelCC</br>
