--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -58,7 +58,7 @@ $(function () {
 <div id="header">
     <div id="tweet">
         <a class="twitter-timeline" href="https://twitter.com/pixelcheesecake" data-widget-id="675069127908806656"  width="300"
-  height="300" data-chrome="nofooter noborders" data-tweet-limit="1">Tweets by @pixelcheesecake</a>
+  height="300" data-chrome="nofooter noheader" data-tweet-limit="1">Tweets by @pixelcheesecake</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 </div>
