--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -50,10 +50,7 @@ $(function () {
 <body>
    <center>
 <div id="headerfiller">
-    <div class="marquee">
-    <p>The Best CheeseCake is a PixelCheeseCake!</p>
-    <p>Test</p>
-    </div>
+    <h3>The Best CheeseCake is a PixelCheeseCake!</h3>
 </div>
 <div id="header">
     <div id="tweet">
