--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -50,7 +50,7 @@ $(function () {
 <body>
    <center>
 <div id="headerfiller">
-    <h3>The Best CheeseCake is a PixelCheeseCake!</h3>
+    <p>The Best CheeseCake is a PixelCheeseCake!</p>
 </div>
 <div id="header">
     <div id="tweet">
