--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -50,7 +50,7 @@ $(function () {
 <body>
    <center>
 <div id="headerfiller">
-    <p>The Best CheeseCake is a PixelCheeseCake!</p>
+    The Best CheeseCake is a PixelCheeseCake!
 </div>
 <div id="header">
     <div id="tweet">
