--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 }(document, "script"));
 </script>
 <!-- Do not change the code! -->
-<p></p>*note* If you click the "send message" button, regardless if anything pops up, your message will be sent.</p>
+<p></p>*note* If you click the "send message" button, regardless of any confirmation, your message will be sent.</p>
 <p align="center">&nbsp;</p>
 </center></div>
 <p style="font-family: 'BenchNine', sans-serif;" align="center"> &nbsp;<span class="rainbow">&copy; 2014 - 2016</span></p>
