Removed Abrupt Closing Tag
Didn't see it when I made the previous commit :3

Fixed now.

--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -71,7 +71,7 @@ $(function () {
    <div class="bg-info">
 <table class="table table-bordered">
 <tr>
-<td><a href="//eathuis.github.io/pixelcc"></a><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" align="left" title="Josh's Picture"></a>
+<td><a href="//eathuis.github.io/pixelcc"><img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" align="left" title="Josh's Picture"></a>
 <h2><span style="font-family: 'Pacifico', cursive;">Josh</span>&nbsp;<span style="font-size:15px;font-weight:bold;color:red;">Eathuis</span></h2></p>
 Josh founded PixelCheeseCake in 2012 with the sole intention of making gaming videos with friends, having fun and generally relieving boredom. Since then he has kept the dream alive, with the help of his awesome pals! Josh does mainly Admin work, managing the various PixelCheeseCake accounts around the web, keeping all the information up to date, handling general uploads and maintaining the Staff Team as a whole. He is the self professed <em>de facto</em> Team Leader.</p>
 He likes nothing more than watching people take long walks on the beach, from a window in his bedroom to which he never leaves. Favourite games include: Minecraft, Terraria, Crash Bandicoot, Spiral Knights, <em>Any</em> Tower Defense Game, The Sonic Franchise, The Legend of Zelda Franchise and much <em>much</em> more. Most people call him boring!</td></tr>
