--- a/pixelcc/images/index.html
+++ b/pixelcc/images/index.html
@@ -63,8 +63,10 @@ $(function () {
 <img title="Pixelated Cheesecakery!" style="float:left;" src="//eathuis.github.io/pixelcc/images/cheesecake.png" width="50px" height="35px">
 <a href="#" type="button" class="btn btn-info">Home</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Videos</a> &nbsp; <a onclick="popup()" style="cursor:pointer;" type="button" class="btn btn-info">Staff</a> &nbsp; <a href="#" type="button" class="btn btn-primary">Contact</a> &nbsp; <a onclick="offline()" style="cursor:pointer;" type="button" class="btn btn-danger" title="Offline Mode">Forums</a></p></div>
 </br>
-     <div class="content"></br>
-Oh, hello! Why are you here?
+     <div class="content">
+         <p>&nbsp;</p>
+            Oh, hello! Why are you here?
+         <p>&nbsp;</p>
 </div>
 <div id="contact"></div>
 <div id="footerinfo">
