Make Link Go To New Tab

--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -141,7 +141,7 @@ Holly's Email: <a onclick="noemail()" style="cursor:pointer;" title="Will never 
 &#8226;&nbsp; <a title="Subscribe to our channel" href="//youtube.com/pixelcheesecake" type="button" class="btn btn-danger btn-sm" target="_blank">YouTube</a> &#8226;&nbsp; <a title="Join in on the Gaming Fun!" href="//steamcommunity.com/groups/pixelcheesecake" type="button" class="btn btn-warning btn-sm" target="_blank">Steam Group</a> &#8226;&nbsp; <a title="Follow us!" href="//twitter.com/pixelcheesecake" type="button" class="btn btn-info btn-sm" target="_blank">Twitter</a> &#8226;&nbsp; <a title="Like our page!" href="//fb.me/pixelcc" type="button" class="btn btn-primary btn-sm" target="_blank">Facebook</a> &#8226;&nbsp; <a title="Reddit away!" href="//reddit.com/r/pixelcheesecake" type="button" class="btn btn-success btn-sm" target="_blank">Subreddit</a> &#8226;&nbsp; <a title="Ask us anything!" href="//ask.fm/pixelcheesecake" type="button" class="btn btn-danger btn-sm" target="_blank">Ask FM</a> &#8226;&nbsp; 
 <p align="center">&nbsp;</p>
 &copy;PixelCheeseCake&trade; 2012. &nbsp; All Rights Reserved.</br>
-<span style="font-size:x-small;">Artwork by <a href="//optical-pyro.deviantart.com">Optical_Pyro</a></span></p>
+<span style="font-size:x-small;">Artwork by <a href="//optical-pyro.deviantart.com" target="_blank">Optical_Pyro</a></span></p>
 <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/2.5/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/2.5/">Creative Commons Attribution-NonCommercial 2.5 Generic License</a>.</div>
 </div>
 </body>
