--- a/pixelcc/index.html
+++ b/pixelcc/index.html
@@ -68,6 +68,42 @@ $(function () {
      <div class="content"></br>
 <h1 style="font-family: 'Pacifico', cursive;">Meet Our <span style="color:red;">Team</span></h1>
 <p>The PixelCC staff team is comprised of dedicated and hard working people. HA! Not really!</p></br>
+<table align="center">
+    <tr>
+        <td>
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Eathuis/175.png" title="Josh's Picture">
+            </a>
+        </td>
+        <td>
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Hollz100/175.png" title="Holly's Picture">
+            </a>
+        </td>
+        <td>
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/MarcyC/175.png" title="Joe's Picture">
+            </a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/SplodgeKat/175.png" title="Izzy's Picture">
+            </a>
+        </td>
+        <td>
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/Optical_Pyro/175.png" title="Matt's Picture">
+            </a>
+        </td>
+        <td>
+            <a style="cursor:default" href="//eathuis.github.io/pixelcc">
+                <img style="padding:40px;" src="http://cravatar.eu/helmavatar/UndeadBadger/175.png" align="left" title="Beric's Picture">
+            </a>
+        </td>
+    </tr>
+</table></p>
    <div class="bg-info">
 <table class="table table-bordered">
 <tr>
